Stop topItems entries from wrapping.
The topItems display code assumes all topItems are single lines.

--- a/NGCHM/WebContent/css/NGCHM.css
+++ b/NGCHM/WebContent/css/NGCHM.css
@@ -567,6 +567,7 @@ span.button.negative {
 	display:inline-table;
 	font-size: 8px;
 	margin: 1px;
+	white-space: nowrap;
 }
 
 .classLegend{
